<resources>
    <string name="app_name">AHRS</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="borrar">Borrar</string>
    <string name="consentimiento">Certifico que he sido informado(a) con claridad y veracidad debida respecto al ejercicio investigativo al cual se me ha invitado a participar y actúo consecuente, libre y voluntariamente como colaborador, contribuyendo a este procedimiento de forma activa</string>
    <string name="ver_consentimiento">Ver consentimiento</string>
    <string name="consentimiento_template">Yo, %1$s, %2$s.</string>
    <string name="mydci">Programa de Maestría y Doctorado en  Ciencias e Ingeniería</string>
    <string name="ciudad">Mexicali, Baja California</string>
    <string name="universidad">Universidad Autónoma de Baja California</string>
    <string name="firma">Firma</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entrenamiento">Entrenamiento</string>
    <string name="clasificador">Clasificador</string>
    <string name="recolecci_n">Recolección</string>
    <string name="validador">Validador</string>
    <string name="dashboard_radio">Dashboard - Radio</string>
    <string name="retrovisor_derecho">Retrovisor derecho</string>
    <string name="retrovisor_izquierdo">Retrovisor izquierdo</string>
    <string name="retrovisor_central">Retrovisor central</string>
    <string name="parabrisas">Parabrisas</string>

    <string name="orientation_angle">%1$s: %2$.2f</string>
    <string name="validation_template">%1$d,%2$d,%3$d,\n</string>
    <string name="recollection_template">%1$d,%2$f,%3$f,%4$f,%5$f,%6$d,%7$.2f,%8$f,%9$f,%10$s,%11$s,%12$f,%13$s\n</string>

    <!--    Main Activity-->
    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">connecting…</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <string name="opciones_para_el_conjunto_de_datos">Opciones para el conjunto de datos</string>
    <string name="opciones_para_el_rea">Opciones para el área</string>

    <!-- Radio Buttons recollection fragment -->
    <string name="radioRango1">0-10KM/H</string>
    <string name="radioRango2">10-20KM/H</string>
    <string name="radioRango3">20-30KM/H</string>
    <string name="radioRango4">30-40KM/H</string>
    <string name="radioRango5">40-50KM/H</string>
    <string name="radioRango6">50-60KM/H</string>
    <string name="radioRango7">60-70KM/H</string>
    <string name="radioRango8">70-80KM/H</string>

</resources>
